<resources>
    <string name="app_name">Bang</string>

    <string name="flag">da</string>
    <string name="USA">USD</string>
    <string name="valuteName">Американский доллар</string>
    <string name="Buy">64.95</string>
    <string name="sell">60.73</string>

    <string name="Street">Москва, ул.Вавилова, д.7</string>
    <string name="Bankomat">Банкомат</string>
    <string name="Department">Отделение</string>
    <string name="DayWork">00:00 00:00</string>
    <string name="OpenTime">09:00 20:00</string>
    <string name="Status">Работает</string>
    <string name="Info">Часы работы</string>


</resources>